Added a prettyName field so that the library or tool can have a name with spaces and special characters.

--- a/web/index.html
+++ b/web/index.html
@@ -58,11 +58,11 @@
 			<h2>Download</h2>
 			<p>
 			Download ##library.name## version ##library.prettyVersion## (##library.version##) in 
-			<a href="./download/##library.name##-##library.version##.zip">.zip format</a>.
+			<a href="./download/##project.name##-##library.version##.zip">.zip format</a>.
 			</p>
 			<h2>Installation</h2>
 			<p>
-			Unzip and put the extracted ##library.name## folder into the libraries folder of your Processing sketches. Reference and examples are included in the ##library.name## folder.
+			Unzip and put the extracted ##project.name## folder into the libraries folder of your Processing sketches. Reference and examples are included in the ##project.name## folder.
 			</p>
 			</div>	
 			
