updated project properties, added logo image, fixed script loading mechanism

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,12 @@
 	<div id="container">
 	
 		<div id="header">
+            <tr>
+                <td style="text-align: center;" colspan="2" height="127"><img style="width: 843px; height: 130px;" alt=""
+ src="logo.jpg">
+                </td>
+            </tr>		
+            <br/><br/>			
 			<h1>##library.name##</h1>
 		</div>
 		
@@ -46,9 +52,7 @@
 			</p>
 			<p>
 			##library.sentence##<br>
-			##library.paragraph##<br>
-			Feel free to replace this paragraph with a description of the library.<br>
-			Contributed libraries are developed, documented, and maintained by members of the Processing community. Further directions are included with each library. For feedback and support, please post to the Discourse. We strongly encourage all libraries to be open source, but not all of them are.
+			##library.paragraph##<br>			
 			</p>
 			</div>
 			
