only show pretty version, 1.0 instead 1.0.0

--- a/web/index.html
+++ b/web/index.html
@@ -61,7 +61,7 @@
 			<div id="download" class="clear">
 			<h2>Download</h2>
 			<p>
-			Download ##library.name## version ##library.prettyVersion## (##library.version##) in 
+			Download ##library.name## version ##library.prettyVersion## in 
 			<a href="./download/##project.name##-##library.version##.zip">.zip format</a>.
 			</p>
 			<h2>Installation</h2>
