update download link

--- a/web/index.html
+++ b/web/index.html
@@ -62,7 +62,7 @@
 			<h2>Download</h2>
 			<p>
 			Download ##library.name## version ##library.prettyVersion## in 
-			<a href="./download/##project.name##-##library.version##.zip">.zip format</a>.
+			<a href="https://github.com/codeanticode/eliza/releases/download/latest/Eliza.zip">.zip format</a>.
 			</p>
 			<h2>Installation</h2>
 			<p>
